@@ -950,6 +950,8 @@ class ListView(BookMarkView):
         raise NotImplemented
 
     def _button_press(self, obj, event):
+        if not self.dbstate.open:
+            return False
         from QuickReports import create_quickreport_menu
         if event.type == gtk.gdk._2BUTTON_PRESS and event.button == 1:
             self.edit(obj)
@@ -983,6 +985,8 @@ class ListView(BookMarkView):
         return False
     
     def _key_press(self, obj, event):
+        if not self.dbstate.open:
+            return False
         if not event.state or event.state  in (gtk.gdk.MOD2_MASK, ):
             if event.keyval in (gtk.keysyms.Return, gtk.keysyms.KP_Enter):
                 self.edit(obj)
